--- a/Test-1.html
+++ b/Test-1.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 <center style="color : red;">hello somsak</center>
-<marquee direction="right">hello somsak</marquee> 
+<marquee scrollamount="70">hello somsak</marquee> 
 </body>
 </html>
